fix: updating jwt util token extraction algorithm, whitelist routes and secret key