@@ -8,6 +8,7 @@ import org.springframework.web.cors.reactive.CorsWebFilter;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -15,7 +16,7 @@ public class CorsConfig {
     @Bean
     public CorsWebFilter corsWebFilter(){
         final CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
+        corsConfiguration.setAllowedOrigins(List.of("*"));
         corsConfiguration.setAllowedMethods(Collections.singletonList("*"));
         corsConfiguration.addAllowedHeader("*");
         corsConfiguration.addExposedHeader("Content-Disposition");
